--- a/test/index.html
+++ b/test/index.html
@@ -26,9 +26,11 @@
   <script type="text/javascript" src="../libs/FileSaver/FileSaver.min.js"></script>
   <script type="text/javascript" src="../libs/js-xlsx/xlsx.core.min.js"></script>
 
+  <!-- For IE11 support include polyfills.umd.js before you include jspdf.umd.min.js and html2canvas.min.js
+  <script type="text/javascript" src="../libs/jsPDF/polyfills.umd.js"></script>
+  -->
   <script type="text/javascript" src="../libs/jsPDF/jspdf.umd.min.js"></script>
 
-  <script type="text/javascript" src="../libs/es6-promise/es6-promise.auto.min.js"></script>
   <script type="text/javascript" src="../libs/html2canvas/html2canvas.min.js"></script>
   <!--<![endif]-->
   <script type="text/javascript" src="../tableExport.js"></script>
