--- a/test/xlsx.html
+++ b/test/xlsx.html
@@ -16,7 +16,7 @@
   </section>
   <section>
     <ul>
-      <li><a href="#" onClick="$('#countries').tableExport({type: 'excel', excel: {fileFormat: 'xlsx'}});"> <img src='icons/xls.png' alt="XLSX" style="width:24px"> XLSX</a></li>
+      <li><a href="#" onClick="$('#countries').tableExport({type: 'excel', mso: {fileFormat: 'xlsx'}});"> <img src='icons/xls.png' alt="XLSX" style="width:24px"> XLSX</a></li>
     </ul>
     <table id="countries">
       <thead>
