New pdfmake parameter 'widths' to control the width of columns in the exported table

--- a/test/pdfmake.html
+++ b/test/pdfmake.html
@@ -56,6 +56,10 @@
           <img src='icons/pdf.png' alt="PDF" style="width:24px"> PDF (pdfmake)</a>
         </li>
         <li>
+          <a href="#" onClick="$('#countries').tableExport({type:'pdf',pdfmake:{enabled:true,docDefinition:{pageOrientation:'landscape'}, widths: ['*','30%']}});">
+            <img src='icons/pdf.png' alt="PDF" style="width:24px"> PDF (pdfmake) with auto column widths</a>
+        </li>
+        <li>
           <a href="#" onClick="$('#mixspans').tableExport({type:'pdf',pdfmake:{enabled:true,docDefinition:{}}});">
           <img src='icons/pdf.png' alt="PDF" style="width:24px"> PDF (pdfmake colspan & rowspan)</a>
         </li>
